--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "tailwindcss": "^3.3.1"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.6",
     "sass": "^1.60.0"
   }
 }
