--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@pinia/nuxt": "^0.4.11",
+    "date-fns": "^2.30.0",
     "pinia": "^2.1.6",
     "sass": "^1.60.0"
   }
