--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/supabase": "^1.1.3",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.3.3",
     "postcss": "^8.4.21",
